@@ -2,6 +2,7 @@
 * Conflict of select2 basic version loaded - FIXED
 * Brizy page builder compatibility - ADDED
 * Featured field always shows checked - FIXED
+* GD > Recent Reviews option added to filter reviews by post id - ADDED
 
 = 2.1.0.10 =
 * Show x stars back instead of rating type name on hover of ratings - CHANGED
